objects/Top_X_Designation__c.object
<CustomObject>
    <label>Top X Designation</label>
    <nameField>
        <label>Top X Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top X Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Flow Down</fullName>
                </value>
                <value>
                    <fullName>Handoff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Top X Designations</relationshipLabel>
        <relationshipName>Top_X_Designations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Attached__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Document Attached</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>